# advent-of-code-2020

./: README.md  advent-of-code.cabal
.stack-work/: stack.sqlite3
.stack-work/install/x86_64-linux-tinfo6/4c8fb1cc46bb446ab8a542b83cbfe5320acf9368137648faf2bfebf0964ab20c/8.8.4/pkgdb/: package.cache
lib/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  day1-1.json
src/: Main.hs
test/: Spec.hs
