name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:       
    base >= 4.7 && < 5
    , bytestring == 0.10.10.1
    , containers
    , split
    , regex-compat == 0.95.2.0
  ghc-options:         -Wall
  exposed-modules:
    Day1,
    Day2,
    Day3,
    Day4,
    Day5,
    Day6,
    Day7

executable advent-of-code
  hs-source-dirs:      src 
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       
    base >= 4.7 && < 5,
    advent-of-code

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             Spec.hs
  ghc-options:         -Wall
  build-depends:
    base >= 4.7 && < 5,
    advent-of-code,
    hspec
